# Villain

./: .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  Doxyfile  LICENSE.md  README.md  build.sh  configure.sh  main.cpp  run.sh  runTests.sh
.github/workflows/: c-cpp.yml
assets/shaders/: sprite.frag
docs/: index.html
docs/html/: AeroControl_8hpp_source.html  Aero_8hpp_source.html  AngledAero_8hpp_source.html  Animation_8hpp_source.html  Animator_8hpp_source.html  Application_8hpp_source.html  AssetBrowser_8hpp_source.html  AssimpUtils_8hpp_source.html  AudioBindings_8hpp_source.html  AudioBuffer_8hpp_source.html  AudioEngine_8hpp_source.html  AudioLoader_8hpp_source.html  AudioSource_8hpp_source.html  BoneInfo_8hpp_source.html  Bone_8hpp_source.html  BoundingVolume_8hpp_source.html  BroadPhase_8hpp_source.html  Buoyancy_8hpp_source.html  CameraController_8hpp_source.html  Camera_8hpp_source.html  CollisionEvent_8hpp_source.html  CollisionLayer_8hpp_source.html  Contact_8hpp_source.html  DebugConsole_8hpp_source.html  DebugRenderer_8hpp_source.html  EditorApplication_8hpp_source.html  Engine_8hpp_source.html  ErrorHandler_8hpp_source.html  EventDispatcher_8hpp_source.html  FileBrowser_8hpp_source.html  FileUtils_8hpp_source.html  FirstPersonCameraController_8hpp_source.html  FlightController_8hpp_source.html  ForceGenerator_8hpp_source.html  FrameBuffer_8hpp_source.html  FrameLimiter_8hpp_source.html  FreeType_8hpp_source.html  Frustum_8hpp_source.html  Gravity_8hpp_source.html  GroundContacts_8hpp_source.html  (+1228 more)
examples/2D/: Bullet.hpp  CMakeLists.txt  Game.hpp  main.cpp  map1.tmx  run.sh
examples/2D/assets/scripts/: config.lua
examples/2D/assets/shaders/: sprite.frag  sprite.vert  spriteBatch.frag  spriteBatch.vert
examples/2D/src/: Agent.cpp  Agent.hpp  Bullet.cpp  Bullet.hpp  Game.cpp  Game.hpp  Gun.cpp  Gun.hpp  Human.cpp  Human.hpp  Player.cpp  Player.hpp  Zombie.cpp  Zombie.hpp
examples/3D/: CMakeLists.txt  clean.sh  configure.sh  run.sh  scene.xml
examples/BallGame/: CMakeLists.txt  run.sh
examples/Bullet/: CMakeLists.txt  run.sh
examples/Bullet/assets/models/: mudeater2.dae  skeleton.mtl
examples/Bullet/assets/scripts/: config.lua
examples/Bullet/src/: BulletBodyComponent.hpp  BulletCharacterComponent.cpp  BulletCharacterComponent.hpp  BulletCharacterController.cpp  BulletCharacterController.hpp  BulletDebugRenderer.cpp  BulletDebugRenderer.hpp  BulletEngine.cpp  BulletEngine.hpp  BulletUtils.hpp  Game.cpp  Game.hpp  main.cpp
examples/FPS/: CMakeLists.txt  run.sh
examples/Platformer/: CMakeLists.txt  run.sh
examples/Platformer/assets/scripts/: config.lua
examples/Platformer/assets/shaders/: light2D.frag  light2D.vert
examples/Platformer/src/: App.cpp  App.hpp  Box.cpp  Box.hpp  Capsule.cpp  Capsule.hpp  GamePlayScreen.cpp  GamePlayScreen.hpp  Light.hpp  Light2D.hpp  MenuScreen.cpp  MenuScreen.hpp  Player.cpp  Player.hpp  main.cpp
examples/Terrain/: CMakeLists.txt  run.sh
examples/ZombieGame/: CMakeLists.txt  map1.tmx  run.sh
res/shaders/: BRDF.glh  BRDFIntegration.glsl  basicTerrain.glsl  cubemap.glsl  envmap.glsl  equirectangularToCubemap.glsl  fog.glh  forward-ambient.glsl  forward-directional.glsl  forward-point.glsl  forward-spot.glsl  forwardLighting.vsh  gaussianBlur.glsl  irradianceConvolution.glsl  lightColor.glsl  lighting.glh  lighting2D.glsl  multiTexTerrain.glsl  normal-debug.glsl  picking.glsl  postProcessing.glsl  preFilterConvolution.glsl  sampling.glh  shadowCubeMap.glsl  shadowMap.glsl  skydome.glsl  spriteBatch.glsl  text.glsl
src/: Application.cpp  Application.hpp  Camera.cpp  Camera.hpp  Camera2D.cpp  Camera2D.hpp  Camera3D.cpp  Camera3D.hpp  CollisionLayer.cpp  CollisionLayer.hpp  DebugConsole.cpp  DebugConsole.hpp  DebugRenderer.cpp  DebugRenderer.hpp  EditorApplication.cpp  EditorApplication.hpp  Engine.cpp  Engine.hpp  ErrorHandler.cpp  ErrorHandler.hpp  EventDispatcher.hpp  FileUtils.cpp  FileUtils.hpp  FrameBuffer.cpp  FrameLimiter.cpp  FrameLimiter.hpp  FreeType.cpp  FreeType.hpp  Frustum.hpp  IGameScreen.cpp  IGameScreen.hpp  ImGuiLayer.cpp  ImGuiLayer.hpp  IndexBuffer.cpp  IndexBuffer.hpp  Input.cpp  Input.hpp  InputManager.cpp  InputManager.hpp  KeyCode.hpp  (+72 more)
src/audio/: AudioBuffer.cpp  AudioBuffer.hpp  AudioEngine.cpp  AudioEngine.hpp  AudioLoader.cpp  AudioLoader.hpp  AudioSource.cpp  AudioSource.hpp
src/camera/: Camera.cpp  Camera.hpp  CameraController.hpp  FirstPersonCameraController.cpp  FirstPersonCameraController.hpp  OrthographicCameraController.cpp  OrthographicCameraController.hpp  ThirdPersonCameraController.cpp  ThirdPersonCameraController.hpp
src/components/: CameraComponent.cpp  CameraComponent.hpp  FlightController.cpp  FlightController.hpp  KinematicController.cpp  KinematicController.hpp  Light.cpp  Light.hpp  LookController.cpp  LookController.hpp  MeshRenderer.cpp  MeshRenderer.hpp  ModelRenderer.cpp  ModelRenderer.hpp  MoveController.cpp  MoveController.hpp  ParticleEmitter.cpp  ParticleEmitter.hpp  ParticlePhysicsComponent.cpp  ParticlePhysicsComponent.hpp  PhysicsEngineComponent.cpp  PhysicsEngineComponent.hpp  PhysicsObjectComponent.cpp  PhysicsObjectComponent.hpp  RigidBodyComponent.cpp  RigidBodyComponent.hpp  ScriptComponent.cpp  ScriptComponent.hpp  TerrainComponent.cpp  TerrainComponent.hpp
src/editor/: AssetBrowser.cpp  AssetBrowser.hpp  DebugConsole.cpp  DebugConsole.hpp  FileBrowser.cpp  FileBrowser.hpp  ImGuiLayer.cpp  ImGuiLayer.hpp  SceneGraphEditor.cpp  SceneGraphEditor.hpp  ScriptEditor.cpp  ScriptEditor.hpp
src/events/: CollisionEvent.hpp  KeyboardEvent.hpp  MouseEvent.hpp  WindowResizeEvent.hpp
src/fsm/: StateMachine.cpp  (+1 more)
tests/: CMakeLists.txt  configure.sh  runTests.sh  sample_test.cpp
tests/unit/: test_assimp_utils.cpp  test_bounding_volumes.cpp  test_camera.cpp  test_contact.cpp  test_event_dispatcher.cpp  test_file_utils.cpp  test_force_generators.cpp  test_index_buffer.cpp  test_mesh_utils.cpp  test_narrow_phase.cpp  test_particle.cpp  test_rigid_body.cpp  test_scene_node.cpp  test_transform.cpp  test_vertex_buffer_layout.cpp
(+329 files in other folders)
